--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,9 +7,10 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: #edcbf4;
   color: #212121;
   line-height: 1.5;
+  background: rgba(0, 0, 0, 0.092);
 }
 
 img {
@@ -32,7 +33,7 @@ img {
 }
 
 .value {
-  border-radius: 10%;
+  border-radius: 11%;
   font-size: 150px;
   background: aqua;
 }
