--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,7 +7,7 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #edcbf4;
+  background-color: #e7e7ca;
   color: #212121;
   line-height: 1.5;
 }
